--- a/pages/turnero.html
+++ b/pages/turnero.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Hospital Eustaquio Aristizabal</title>
+		<title>Turnero - Hospital Eustaquio Aristizabal</title>
 
 		<!-- BOOTSTRAP -->
 		<link
@@ -39,7 +39,7 @@
 						<ul class="navbar-nav text-center nav-pills">
 							<li class="nav-item">
 								<a
-									class="nav-link enlaces activo"
+									class="nav-link enlaces"
 									aria-current="page"
 									href="../index.html"
 									>Inicio</a
@@ -51,7 +51,9 @@
 								>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link enlaces" href="/pages/turnero.html"
+								<a
+									class="nav-link enlaces activo"
+									href="/pages/turnero.html"
 									>Sacar turno</a
 								>
 							</li>
