--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -33,42 +33,50 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 					<div
-						class="collapse navbar-collapse justify-content-end bg-transparent"
+						class="collapse navbar-collapse bg-transparent"
 						id="navbarNavDropdown"
 					>
 						<ul class="navbar-nav text-center nav-pills">
 							<li class="nav-item">
 								<a
-									class="nav-link enlaces"
+									class="nav-link enlaces text-uppercase"
 									aria-current="page"
 									href="../index.html"
 									>Inicio</a
 								>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link enlaces" href="/pages/caps.html"
+								<a
+									class="nav-link enlaces text-uppercase"
+									href="/pages/caps.html"
 									>CAPS</a
 								>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link enlaces" href="/pages/turnero.html"
+								<a
+									class="nav-link enlaces text-uppercase"
+									href="/pages/turnero.html"
 									>Sacar turno</a
 								>
 							</li>
 							<li class="nav-item">
 								<a
-									class="nav-link enlaces activo"
+									class="nav-link enlaces text-uppercase activo"
 									href="/pages/agenda.html"
 									>Agenda turnos</a
 								>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link enlaces" href="/pages/personal.html"
+								<a
+									class="nav-link enlaces text-uppercase"
+									href="/pages/personal.html"
 									>Personal Médico</a
 								>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link enlaces" href="/pages/contacto.html"
+								<a
+									class="nav-link enlaces text-uppercase"
+									href="/pages/contacto.html"
 									>Contacto</a
 								>
 							</li>
