--- a/caps.html
+++ b/caps.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAPS</title>
     <!-- BOOTSTRAP -->
-		<link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous"
-    />
-    <!--    CSS CAPS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <!--    CSS - CAPS-->
     <link rel="stylesheet" href="./css/caps.css">
 </head>
+
 <body>
-     <!--    HEADER  -->
-     <header class="encabezado">
+    <!--    HEADER  -->
+    <header class="encabezado">
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid bg-transparent">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -51,7 +49,50 @@
     </header>
 
     <main class="contenedor">
-        <section class="estructura_contenido"></section>
+        <section class="estructura_contenido">
+            <h1>Centros de Atencio Primaria de Salud</h1>
+            <!-- CAPS MAPAS-->
+            <div class="box-container">
+                <div class="box">
+                    <h2>C.A.P.S. - Gral. Piran</h2>
+                    <p>Dirección: Falucho N° 153</p>
+                    <h3>Teléfono: 02265-49-1067</h3>
+                </div>
+                <div class="box">
+                    <h2>C.A.P.S. - Mar de Cobo</h2>
+                    <p>Dirección: De la Merced N° 423</p>
+                    <h3>Teléfono: 0223-584-4358</h3>
+                </div>
+                <div class="box">
+                    <h2>C.A.P.S. - Balneario Mar Chiquita</h2>
+                    <p>Dirección: Fernando Soler N° 1424</p>
+                    <h3>Teléfono: 0223-469-1069</h3>
+                </div>
+                <div class="box">
+                    <h2>C.A.P.S. - Santa Clara del Mar</h2>
+                    <p>Dirección: Punta Lara N° 408</p>
+                    <h3>Teléfono: 0223-460-2338 – 223-469-3742</h3>
+                </div>
+
+                <div class="box">
+                    <h2>C.A.P.S. - Santa Elena</h2>
+                    <p>Dirección: Pedro de Mendoza N° 192</p>
+                    <h3>Teléfono: 0223-469-3390</h3>
+                </div>
+                <div class="box">
+                    <h2>C.A.P.S. - Vivorata</h2>
+                    <p>Dirección: La Posta N° 56</p>
+                    <h3>Teléfono: 02265-492011</h3>
+                </div>
+            </div>
+            <div class="map">
+                <div>
+                    <iframe
+                        src="https://www.google.com/maps/d/embed?mid=1nUfHfow3wCMsg1qCiLb2WU5PXdNY9W0&hl=es&ehbc=2E312F"
+                        width="100%" height="500px"></iframe>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- ICONOS -->
@@ -62,73 +103,17 @@
 
     <!-- JS -->
 
-    <!-- CAPS MAPAS-->
-    <div class="flexbox">
-        <div class="flex-item">
-            <h2>C.A.P.S. - Gral. Piran</h2>
-            <p>Dirección: Falucho N° 153</p>
-            <h3>Teléfono: 02265-49-1067</h3>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2691.342699115683!2d-57.78038832413994!3d-37.27272517211616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959af90a28649ac7%3A0x1945b7221ecc1a9!2sCentro%20de%20Atenci%C3%B3n%20Primaria%20de%20la%20Salud%20(CAPS)!5e1!3m2!1ses-419!2sar!4v1713479125524!5m2!1ses-419!2sar"
-                width="360" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="flex-item">
-            <h2>C.A.P.S. - Mar de Cobo</h2>
-            <p>Dirección: De la Merced N° 423</p>
-            <h3>Teléfono: 0223-584-4358</h3>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10680.06501322597!2d-57.47106703632785!3d-37.    77412079999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.   1!3m3!1m2!1s0x9584cd8316df08b5%3A0x5f7fc62964946c91!2sUnidad%20Sanitaria%20Evita!5e1!3m2!1ses-419!2sar!4v171348003569  3!5m2!1ses-419!2sar"
-                width="360" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="flex-item">
-            <h2>C.A.P.S. - Balneario Mar Chiquita</h2>
-            <p>Dirección: Fernando Soler N° 1424</p>
-            <h3>Teléfono: 0223-469-1069</h3>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.4180629534953!2d-57.436007124633804!3d-37.74140962990549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584cd3c08c12b79%3A0xf8b1031e40b6e483!2sUnidad%20Sanitaria!5e1!3m2!1ses-419!2sar!4v1713725602332!5m2!1ses-419!2sar"
-                width="360" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="flex-item">
-            <h2>C.A.P.S. - Santa Clara del Mar</h2>
-            <p>Dirección: Punta Lara N° 408</p>
-            <h3>Teléfono: 0223-460-2338 – 223-469-3742</h3>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.01927268732!2d-57.50879132411364!3d-37.8364346719699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584d19d10449f2d%3A0xb3a58d2bfde82b18!2sUnidad%20Sanitaria%20Santa%20Clara%20del%20Mar!5e0!3m2!1ses-419!2sar!4v1713725819983!5m2!1ses-419!2sar"
-                width="360" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="flex-item">
-            <h2>C.A.P.S. - Santa Elena</h2>
-            <p>Dirección: Pedro de Mendoza N° 192</p>
-            <h3>Teléfono: 0223-469-3390</h3>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2670.3292556900224!2d-57.52620012462677!3d-37.85853743659741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584d103ecb1abef%3A0xcf1277d448556f0!2sUnidad%20Sanitaria%20Santa%20Elena!5e1!3m2!1ses-419!2sar!4v1713725892936!5m2!1ses-419!2sar"
-                width="360" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="flex-item">
-            <h2>C.A.P.S. - Vivorata</h2>
-            <p>Dirección: La Posta N° 56</p>
-            <h3>Teléfono: 02265-492011</h3>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2670.3292556900224!2d-57.52620012462677!3d-37.85853743659741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584d103ecb1abef%3A0xcf1277d448556f0!2sUnidad%20Sanitaria%20Santa%20Elena!5e1!3m2!1ses-419!2sar!4v1713725892936!5m2!1ses-419!2sar"
-                width="360" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </div>
+
 
     <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 
     <!--    FOOTER-->
     <footer class="pie_pagina">
         <p>NodeJS &copy Codo a Codo 2024</p>
     </footer>
 </body>
+
 </html>
