--- a/personalMedico.html
+++ b/personalMedico.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAPS</title>
+    <title>Personal Medico</title>
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <!--    CSS CAPS-->
-    <link rel="stylesheet" href="./css/personal.css">
+    <!--    CSS - PERSONAL MEDICO-->
+    <link rel="stylesheet" href="./css/personalMedico.css">
 </head>
 
 <body>
@@ -48,110 +48,111 @@
         </nav>
     </header>
 
-    <!-- PERSONAL MEDICO -->
-    <div>
-        <h1>Personal médico</h1>
-        <div class="box-container">
-            <div class="box">
-                <img src="./imagenes/img04.jpg" alt="">
-                <h3>Dr. ALVAREZBURGOS JULIO JUNIOR</h3>
-                <h4>Pediatría</h4>
-                <p>Matricula N° 245987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img02.jpg" alt="">
-                <h3>Dr. ARANA GABRIEL ALEJANDRO</h3>
-                <h4>Médico clínico</h4>
-                <p>Matricula N° 212287</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img02.jpg" alt="">
-                <h3>Dr. BEROLDI SANTIAGO</h3>
-                <h4>Odontología</h4>
-                <p>Matricula N° 234987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img03.jpg" alt="">
-                <h3>Dra. CANTAR MONICA LILIANA</h3>
-                <h4>Médica clínica</h4>
-                <p>Matricula N° 305987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img05.jpg" alt="">
-                <h3>Dra. CUDA ROMINA</h3>
-                <h4>Cardiología</h4>
-                <p>Matricula N° 245987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img02.jpg" alt="">
-                <h3>Dr. JUAN IGNACIO SAMMARTINO</h3>
-                <h4>Diagnóstico por imágen</h4>
-                <p>Matricula N° 245667</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img04.jpg" alt="">
-                <h3>Dr. LANDI CARLOS ALBERTO</h3>
-                <h4>Cardiología</h4>
-                <p>Matricula N° 365587</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img03.jpg" alt="">
-                <h3>Dra. MARIANO BEATRIZ DEL CARMEN</h3>
-                <h4>Traumatología</h4>
-                <p>Matricula N° 1335987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img04.jpg" alt="">
-                <h3>Dr. MARINI NICOLAS ALEJANDRO</h3>
-                <h4>Cirugá general</h4>
-                <p>Matricula N° 212587</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img05.jpg" alt="">
-                <h3>Dra. PINESE ANTONELLA</h3>
-                <h4>Psiquiatría</h4>
-                <p>Matricula N° 348987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img03.jpg" alt="">
-                <h3>Dra. POMAR MABEL</h3>
-                <h4>Dermatologá</h4>
-                <p>Matricula N° 243287</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img02.jpg" alt="">
-                <h3>Dr. SAHORES FRANCISCO DANIEL</h3>
-                <h4>Endocrinología</h4>
-                <p>Matricula N° 195987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img05.jpg" alt="">
-                <h3>Dra. Settembrino Ivana Maria</h3>
-                <h4>Médico clínico</h4>
-                <p>Matricula N° 245547</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img04.jpg" alt="">
-                <h3>Dr. Vargas Fernando Romeo</h3>
-                <h4>Médico clínico</h4>
-                <p>Matricula N° 245987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img02.jpg" alt="">
-                <h3>Dr. Yedid Pablo Alfredo</h3>
-                <h4>Ginecología</h4>
-                <p>Matricula N° 125987</p>
-            </div>
-            <div class="box">
-                <img src="./imagenes/img05.jpg" alt="">
-                <h3>Dra. Rudolph Alejandra</h3>
-                <h4>Pediatra</h4>
-                <p>Matricula N° 249887</p>
-            </div>
-        </div>
-    </div>
     <main class="contenedor">
-        <section class="estructura_contenido"></section>
+        <section class="estructura_contenido">
+            <!-- PERSONAL MEDICO -->
+            <div>
+                <h1>Personal médico</h1>
+                <div class="box-container">
+                    <div class="box">
+                        <img src="./imagenes/img04.jpg" alt="">
+                        <h3>Dr. ALVAREZBURGOS JULIO JUNIOR</h3>
+                        <h4>Pediatría</h4>
+                        <p>Matricula N° 245987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img02.jpg" alt="">
+                        <h3>Dr. ARANA GABRIEL ALEJANDRO</h3>
+                        <h4>Médico clínico</h4>
+                        <p>Matricula N° 212287</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img02.jpg" alt="">
+                        <h3>Dr. BEROLDI SANTIAGO</h3>
+                        <h4>Odontología</h4>
+                        <p>Matricula N° 234987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img03.jpg" alt="">
+                        <h3>Dra. CANTAR MONICA LILIANA</h3>
+                        <h4>Médica clínica</h4>
+                        <p>Matricula N° 305987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img05.jpg" alt="">
+                        <h3>Dra. CUDA ROMINA</h3>
+                        <h4>Cardiología</h4>
+                        <p>Matricula N° 245987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img02.jpg" alt="">
+                        <h3>Dr. JUAN IGNACIO SAMMARTINO</h3>
+                        <h4>Diagnóstico por imágen</h4>
+                        <p>Matricula N° 245667</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img04.jpg" alt="">
+                        <h3>Dr. LANDI CARLOS ALBERTO</h3>
+                        <h4>Cardiología</h4>
+                        <p>Matricula N° 365587</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img03.jpg" alt="">
+                        <h3>Dra. MARIANO BEATRIZ DEL CARMEN</h3>
+                        <h4>Traumatología</h4>
+                        <p>Matricula N° 1335987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img04.jpg" alt="">
+                        <h3>Dr. MARINI NICOLAS ALEJANDRO</h3>
+                        <h4>Cirugá general</h4>
+                        <p>Matricula N° 212587</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img05.jpg" alt="">
+                        <h3>Dra. PINESE ANTONELLA</h3>
+                        <h4>Psiquiatría</h4>
+                        <p>Matricula N° 348987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img03.jpg" alt="">
+                        <h3>Dra. POMAR MABEL</h3>
+                        <h4>Dermatologá</h4>
+                        <p>Matricula N° 243287</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img02.jpg" alt="">
+                        <h3>Dr. SAHORES FRANCISCO DANIEL</h3>
+                        <h4>Endocrinología</h4>
+                        <p>Matricula N° 195987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img05.jpg" alt="">
+                        <h3>Dra. Settembrino Ivana Maria</h3>
+                        <h4>Médico clínico</h4>
+                        <p>Matricula N° 245547</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img04.jpg" alt="">
+                        <h3>Dr. Vargas Fernando Romeo</h3>
+                        <h4>Médico clínico</h4>
+                        <p>Matricula N° 245987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img02.jpg" alt="">
+                        <h3>Dr. Yedid Pablo Alfredo</h3>
+                        <h4>Ginecología</h4>
+                        <p>Matricula N° 125987</p>
+                    </div>
+                    <div class="box">
+                        <img src="./imagenes/img05.jpg" alt="">
+                        <h3>Dra. Rudolph Alejandra</h3>
+                        <h4>Pediatra</h4>
+                        <p>Matricula N° 249887</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- ICONOS -->
