--- a/pages/turnero.html
+++ b/pages/turnero.html
@@ -16,6 +16,8 @@
 
 		<!-- CSS General -->
 		<link rel="stylesheet" href="/css/general.css" />
+		<!-- CSS propio de la página -->
+		<link rel="stylesheet" href="/css/turnero.css" />
 	</head>
 	<body>
 		<header class="encabezado">
@@ -87,7 +89,48 @@
 		</header>
 
 		<main class="contenedor">
-			<section class="estructura_contenido"></section>
+			<section class="estructura_contenido">
+				<h1>Solicitar turno</h1>
+				<article class="inputs">
+					<div class="mb-3">
+						<label for="medico" class="form-label">Médico</label>
+						<select
+							name="listaMedico"
+							id="listaMedico"
+							class="form-select"
+						>
+							<option value="">Seleccione un médico</option>
+						</select>
+					</div>
+					<div class="mb-3">
+						<label for="mes" class="form-label">Seleccionar mes</label>
+						<input
+							type="month"
+							name="mes"
+							id="mes"
+							class="form-control"
+						/>
+					</div>
+				</article>
+
+				<hr />
+
+				<article class="calendario" id="calendario">
+					<span class="tit_calendario">Seleccionar día</span>
+					<div class="bloque_fecha">
+						<section class="dias_semana" id="dias_semana">
+							<span>Lunes</span>
+							<span>Martes</span>
+							<span>Miércoles</span>
+							<span>Jueves</span>
+							<span>Viernes</span>
+							<span>Sábado</span>
+							<span>Domingo</span>
+						</section>
+						<section class="fechas" id="fechas"></section>
+					</div>
+				</article>
+			</section>
 		</main>
 		<footer class="pie_pagina">
 			<p>NodeJS &copy Codo a Codo 2024</p>
@@ -107,5 +150,6 @@
 		></script>
 
 		<!-- JS -->
+		<script src="/js/turnero.js" type="module"></script>
 	</body>
 </html>
