--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
 		<!-- CSS General -->
 		<link rel="stylesheet" href="/css/general.css" />
+
+		<!-- FAVICON -->
+	<link rel="icon" href="img/favicon32x32.ico" type="image/x-icon">
+	
 	</head>
 	<body>
 		<header class="encabezado">
@@ -86,8 +90,96 @@
 			</nav>
 		</header>
 
-		<main class="contenedor">
-			<section class="estructura_contenido"></section>
+		<main>
+			<section class="contenedor">
+				<div>
+					<h1>Actualidad</h1>
+				</div>
+				<!--Bloque 1-->
+				<div class="bloque  parallax cover-1"> 
+	
+				</div>
+					<h2>General Piran</h2>
+					<div>
+						<p>El gobernador de la provincia de Buenos Aires, Axel Kicillof, el intendente del Partido de
+							Mar Chiquita, Walter Wischnivetzky y el ministro de Salud, Nicolás Kreplak procederán a la
+							inauguración de la ampliación del Centro de Atención Primaria de la Salud (CAPS) de General
+							Pirán, el
+							jueves 18 de abril, a las 10.<br>La obra que se llevó adelante en un trabajo conjunto de la
+							provincia
+							de Buenos Aires con la Municipalidad de Mar Chiquita, incluye la ampliación del sector de
+							habitaciones en el Centro de Atención Primaria de la Salud, Dr. Luis Sagasta de General
+							Pirán.<br>De esta
+							manera, el intendente Walter Wischnivetzky recibirá al gobernador de la provincia de Buenos
+							Aires,
+							Axel Kicillof en el Partido de Mar Chiquita para inaugurar la ampliación del CAPS de General
+							Pirán.<br> Dicha ampliación es de de 130 m2 de superficie cubierta y 6.80 m2 de superficie
+							semi-cubierta e incluye la construcción de 3 nuevas habitaciones con sus respectivos baños,
+							una sala de
+							médicos, office de enfermería, sala de espera y semicubierto de acceso. De esta manera el
+							sector de
+							internación aumentaría en 6 camas su capacidad, pudiendo tener una habitación exclusiva
+							destinada para internación pediátrica y una destinada para obstetricia.
+						</p>
+					</div>
+	
+				<!--Bloque 2-->
+				<div class="bloque  parallax cover-2">
+	
+				</div>
+				<h2>Coronel Vidal</h2>
+				<div>
+					<p>Con la participación del intendente del Partido de Mar Chiquita, Jorge Paredi, y la titular de
+						PAMI,
+						Luana Volnovich, quedó inaugurada una Sala de Tomografía en el Hospital Municipal “Eustaquio
+						Aristizábal” de Coronel Vidal.<br> Esta inauguración está relacionada con el programa “+
+						Tecnología + Salud”, que en junio de 2022 el jefe comunal firmó con la titular de PAMI, para la
+						adquisición
+						de un tomógrafo.<br> Un tomógrafo para el hospital municipal es fundamental, ya que contamos con
+						más de 7.000 afiliados a PAMI. Seguimos trabajando para los vecinos, con la salud como
+						prioridad”,
+						afirmó Paredi. Además, el municipio llevó adelante la obra de la Sala de Tomografía.<br>“La
+						posibilidad
+						de tener un tomógrafo en nuestro sistema público de salud se concreta gracias al trabajo
+						conjunto
+						con PAMI. Agradecemos a Volnovich y al director de la UGL, Fernando Mogni, por la gestión de los
+						últimos</p>
+				</div>
+	
+				<!--Bloque 3-->
+				<div class="bloque parallax cover-3"> 
+	
+				</div>
+					<h2>Historia</h2>
+					<div>
+						<p>El Hospital Municipal “Eustaquio Aristizábal, a partir de una donación de Micaela U. de
+							Aristizábal y en conjunto con el Municipio mediante el aporte del terreno, la financiación y
+							dirección de parte
+							de la obra y de los recursos necesarios para su funcionamiento, inagurado el 12 de enero de
+							1913. El
+							mismo contaba con cuatro pabellones con capacidad para albergar a 48 pacientes, así como con
+							modernas
+							instalaciones para la epoca.<br> El día de la inauguración del hospital llegaron en ferrocarril
+							a la cabecera del partido de Mar Chiquita el entonces Gobernador de la Provincia, Coronel Pedro
+							Ezequiel de la Serna, junto con algunos de sus ministros y altos jefes de reparticiones
+							públicas, como
+							asi tambien estuvo presente el Obispo de La Plata Juan N. Terrero quien bendijo las
+							instalaciones
+							del flamante centro de salud. En 1939 el Hospital Municipal se expandió a partir de la
+							construcción
+							del pabellón de infecciosos, anexo a su sede principal.<br> Así fue creado el Hospital Municipal
+							“Eustaquio Aristizabal”, que tantos y grandes beneficios ha dado y sigue dando. Todo esto
+							gracias a
+							la ayuda entusiasta de sus trabajadores, de las hermanas de la caridad, del gobierno municipal y
+							de la comunidad en general que han aportado al crecimiento del mismo para su ampliación, para la
+							instalación de nuevos equipos y nuevas dependencias que hoy brindan un
+							servicio valioso a todo el Partido de Mar Chiquita.
+						</p>
+					</div>
+				<div class="bloque parallax cover-4"> 
+					
+				</div>
+			</section>
 		</main>
 		<footer class="pie_pagina">
 			<p>NodeJS &copy Codo a Codo 2024</p>
