caps y personal ok

--- a/pages/caps.html
+++ b/pages/caps.html
@@ -12,9 +12,13 @@
 		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
 	<!-- CSS General -->
-	<link rel="stylesheet" href="/css/general.css" />
+	<link rel="stylesheet" href="./css/general.css" />
 	<!--    CSS - CAPS-->
 	<link rel="stylesheet" href="../css/caps.css">
+
+	<!-- FAVICON -->
+	<link rel="icon" href="img/favicon32x32.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -30,29 +34,28 @@
 				<div class="collapse navbar-collapse bg-transparent" id="navbarNavDropdown">
 					<ul class="navbar-nav text-center nav-pills">
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" aria-current="page"
-								href="../index.html">Inicio</a>
+							<a class="nav-link enlaces text-uppercase activo" aria-current="page"
+								href="/index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase activo" href="/pages/caps.html">CAPS</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/caps.html">CAPS</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/turnero.html">Sacar turno</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/turnero.html">Sacar turno</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/agenda.html">Agenda turnos</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/agenda.html">Agenda turnos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/personal.html">Personal Médico</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/personal.html">Personal Médico</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/contacto.html">Contacto</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/contacto.html">Contacto</a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-
 	</header>
 
 	<main class="contenedor">
