--- a/pages/turnero.html
+++ b/pages/turnero.html
@@ -28,22 +28,23 @@
 				<div class="collapse navbar-collapse bg-transparent" id="navbarNavDropdown">
 					<ul class="navbar-nav text-center nav-pills">
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" aria-current="page" href="../index.html">Inicio</a>
+							<a class="nav-link enlaces text-uppercase activo" aria-current="page"
+								href="/index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/caps.html">CAPS</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/caps.html">CAPS</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase activo" href="/pages/turnero.html">Sacar turno</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/turnero.html">Sacar turno</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/agenda.html">Agenda turnos</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/agenda.html">Agenda turnos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/personal.html">Personal Médico</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/personal.html">Personal Médico</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/contacto.html">Contacto</a>
+							<a class="nav-link enlaces text-uppercase" href="./pages/contacto.html">Contacto</a>
 						</li>
 					</ul>
 				</div>
