index parallax ok

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<ul class="navbar-nav text-center nav-pills">
 						<li class="nav-item">
 							<a class="nav-link enlaces text-uppercase activo" aria-current="page"
-								href="/index.html">Inicio</a>
+								href="../index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link enlaces text-uppercase" href="/pages/caps.html">CAPS</a>
@@ -56,7 +56,7 @@
 	</header>
 
 	<main>
-		<section class="contenedor">
+		<section>
 			<div>
 				<h1>Actualidad</h1>
 			</div>
