--- a/pages/caps.html
+++ b/pages/caps.html
@@ -12,12 +12,12 @@
 		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
 	<!-- CSS General -->
-	<link rel="stylesheet" href="./css/general.css" />
+	<link rel="stylesheet" href="../css/general.css" />
 	<!--    CSS - CAPS-->
 	<link rel="stylesheet" href="../css/caps.css">
 
 	<!-- FAVICON -->
-	<link rel="icon" href="img/favicon32x32.ico" type="image/x-icon">
+	<link rel="icon" href="../img/favicon32x32.ico" type="image/x-icon">
 
 </head>
 
