--- a/pages/personal.html
+++ b/pages/personal.html
@@ -1,185 +1,220 @@
 <!DOCTYPE html>
 <html lang="es">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Médicos - Hospital Eustaquio Aristizabal</title>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Médicos - Hospital Eustaquio Aristizabal</title>
+		<!-- BOOTSTRAP -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous"
+		/>
 
-	<!-- BOOTSTRAP -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+		<!-- CSS General -->
+		<link rel="stylesheet" href="../css/general.css" />
+		 <!--    CSS - PERSONAL MEDICO-->
+		 <link rel="stylesheet" href="../css/personalMedico.css">
+		 <!-- FAVICON -->
+	<link rel="icon" href="../img/favicon32x32.ico" type="image/x-icon">
 
-	<!-- CSS General -->
-	<link rel="stylesheet" href="/css/general.css" />
-
-	<!-- FAVICON -->
-	<link rel="icon" href="/img/favicon32x32.ico" type="image/x-icon">
-
-	<!--    CSS - PERSONAL MEDICO-->
-	<link rel="stylesheet" href="/css/personalMedico.css">
-</head>
-
-<body>
-	<header class="encabezado">
-		<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-			<div class="container-fluid bg-transparent">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse bg-transparent" id="navbarNavDropdown">
-					<ul class="navbar-nav text-center nav-pills">
-						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase activo" aria-current="page"
-								href="/index.html">Inicio</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/caps.html">CAPS</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/turnero.html">Sacar turno</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/agenda.html">Agenda turnos</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/personal.html">Personal Médico</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/contacto.html">Contacto</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
-
-	<main class="contenedor">
-		<section class="estructura_contenido">
-			<!-- PERSONAL MEDICO -->
-			<div>
-				<h1>Personal médico</h1>
-				<div class="box-container">
-					<div class="box">
-						<img src="../img/img04.jpg" alt="">
-						<h3>Dr. ALVAREZBURGOS JULIO JUNIOR</h3>
-						<h4>Pediatría</h4>
-						<p>Matricula N° 245987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img02.jpg" alt="">
-						<h3>Dr. ARANA GABRIEL ALEJANDRO</h3>
-						<h4>Médico clínico</h4>
-						<p>Matricula N° 212287</p>
-					</div>
-					<div class="box">
-						<img src="../img/img02.jpg" alt="">
-						<h3>Dr. BEROLDI SANTIAGO</h3>
-						<h4>Odontología</h4>
-						<p>Matricula N° 234987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img03.jpg" alt="">
-						<h3>Dra. CANTAR MONICA LILIANA</h3>
-						<h4>Médica clínica</h4>
-						<p>Matricula N° 305987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img05.jpg" alt="">
-						<h3>Dra. CUDA ROMINA</h3>
-						<h4>Cardiología</h4>
-						<p>Matricula N° 245987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img02.jpg" alt="">
-						<h3>Dr. JUAN IGNACIO SAMMARTINO</h3>
-						<h4>Diagnóstico por imágen</h4>
-						<p>Matricula N° 245667</p>
-					</div>
-					<div class="box">
-						<img src="../img/img04.jpg" alt="">
-						<h3>Dr. LANDI CARLOS ALBERTO</h3>
-						<h4>Cardiología</h4>
-						<p>Matricula N° 365587</p>
-					</div>
-					<div class="box">
-						<img src="../img/img03.jpg" alt="">
-						<h3>Dra. MARIANO BEATRIZ DEL CARMEN</h3>
-						<h4>Traumatología</h4>
-						<p>Matricula N° 1335987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img04.jpg" alt="">
-						<h3>Dr. MARINI NICOLAS ALEJANDRO</h3>
-						<h4>Cirugá general</h4>
-						<p>Matricula N° 212587</p>
-					</div>
-					<div class="box">
-						<img src="../img/img05.jpg" alt="">
-						<h3>Dra. PINESE ANTONELLA</h3>
-						<h4>Psiquiatría</h4>
-						<p>Matricula N° 348987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img03.jpg" alt="">
-						<h3>Dra. POMAR MABEL</h3>
-						<h4>Dermatologá</h4>
-						<p>Matricula N° 243287</p>
-					</div>
-					<div class="box">
-						<img src="../img/img02.jpg" alt="">
-						<h3>Dr. SAHORES FRANCISCO DANIEL</h3>
-						<h4>Endocrinología</h4>
-						<p>Matricula N° 195987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img05.jpg" alt="">
-						<h3>Dra. Settembrino Ivana Maria</h3>
-						<h4>Médico clínico</h4>
-						<p>Matricula N° 245547</p>
-					</div>
-					<div class="box">
-						<img src="../img/img04.jpg" alt="">
-						<h3>Dr. Vargas Fernando Romeo</h3>
-						<h4>Médico clínico</h4>
-						<p>Matricula N° 245987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img02.jpg" alt="">
-						<h3>Dr. Yedid Pablo Alfredo</h3>
-						<h4>Ginecología</h4>
-						<p>Matricula N° 125987</p>
-					</div>
-					<div class="box">
-						<img src="../img/img05.jpg" alt="">
-						<h3>Dra. Rudolph Alejandra</h3>
-						<h4>Pediatra</h4>
-						<p>Matricula N° 249887</p>
+	</head>
+	<body>
+		<header class="encabezado">
+			<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+				<div class="container-fluid bg-transparent">
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarNavDropdown"
+						aria-controls="navbarNavDropdown"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div
+						class="collapse navbar-collapse bg-transparent"
+						id="navbarNavDropdown"
+					>
+						<ul class="navbar-nav text-center nav-pills">
+							<li class="nav-item">
+								<a
+									class="nav-link enlaces text-uppercase"
+									aria-current="page"
+									href="../index.html"
+									>Inicio</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link enlaces text-uppercase"
+									href="/pages/caps.html"
+									>CAPS</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link enlaces text-uppercase"
+									href="/pages/turnero.html"
+									>Sacar turno</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link enlaces text-uppercase"
+									href="/pages/agenda.html"
+									>Agenda turnos</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link enlaces text-uppercase activo"
+									href="/pages/personal.html"
+									>Personal Médico</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link enlaces text-uppercase"
+									href="/pages/contacto.html"
+									>Contacto</a
+								>
+							</li>
+						</ul>
 					</div>
 				</div>
-			</div>
+			</nav>
+		</header>
 
-		</section>
-	</main>
-	<footer class="pie_pagina">
-		<p>NodeJS &copy Codo a Codo 2024</p>
-	</footer>
+		<main class="contenedor">
+			<section class="estructura_contenido">
+				<!-- PERSONAL MEDICO -->
+				<div>
+					<h1>Personal médico</h1>
+					<div class="box-container">
+						<div class="box">
+							<img src="../img/img04.jpg" alt="">
+							<h3>Dr. ALVAREZBURGOS JULIO JUNIOR</h3>
+							<h4>Pediatría</h4>
+							<p>Matricula N° 245987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img02.jpg" alt="">
+							<h3>Dr. ARANA GABRIEL ALEJANDRO</h3>
+							<h4>Médico clínico</h4>
+							<p>Matricula N° 212287</p>
+						</div>
+						<div class="box">
+							<img src="../img/img02.jpg" alt="">
+							<h3>Dr. BEROLDI SANTIAGO</h3>
+							<h4>Odontología</h4>
+							<p>Matricula N° 234987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img03.jpg" alt="">
+							<h3>Dra. CANTAR MONICA LILIANA</h3>
+							<h4>Médica clínica</h4>
+							<p>Matricula N° 305987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img05.jpg" alt="">
+							<h3>Dra. CUDA ROMINA</h3>
+							<h4>Cardiología</h4>
+							<p>Matricula N° 245987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img02.jpg" alt="">
+							<h3>Dr. JUAN IGNACIO SAMMARTINO</h3>
+							<h4>Diagnóstico por imágen</h4>
+							<p>Matricula N° 245667</p>
+						</div>
+						<div class="box">
+							<img src="../img/img04.jpg" alt="">
+							<h3>Dr. LANDI CARLOS ALBERTO</h3>
+							<h4>Cardiología</h4>
+							<p>Matricula N° 365587</p>
+						</div>
+						<div class="box">
+							<img src="../img/img03.jpg" alt="">
+							<h3>Dra. MARIANO BEATRIZ DEL CARMEN</h3>
+							<h4>Traumatología</h4>
+							<p>Matricula N° 1335987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img04.jpg" alt="">
+							<h3>Dr. MARINI NICOLAS ALEJANDRO</h3>
+							<h4>Cirugá general</h4>
+							<p>Matricula N° 212587</p>
+						</div>
+						<div class="box">
+							<img src="../img/img05.jpg" alt="">
+							<h3>Dra. PINESE ANTONELLA</h3>
+							<h4>Psiquiatría</h4>
+							<p>Matricula N° 348987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img03.jpg" alt="">
+							<h3>Dra. POMAR MABEL</h3>
+							<h4>Dermatologá</h4>
+							<p>Matricula N° 243287</p>
+						</div>
+						<div class="box">
+							<img src="../img/img02.jpg" alt="">
+							<h3>Dr. SAHORES FRANCISCO DANIEL</h3>
+							<h4>Endocrinología</h4>
+							<p>Matricula N° 195987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img05.jpg" alt="">
+							<h3>Dra. Settembrino Ivana Maria</h3>
+							<h4>Médico clínico</h4>
+							<p>Matricula N° 245547</p>
+						</div>
+						<div class="box">
+							<img src="../img/img04.jpg" alt="">
+							<h3>Dr. Vargas Fernando Romeo</h3>
+							<h4>Médico clínico</h4>
+							<p>Matricula N° 245987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img02.jpg" alt="">
+							<h3>Dr. Yedid Pablo Alfredo</h3>
+							<h4>Ginecología</h4>
+							<p>Matricula N° 125987</p>
+						</div>
+						<div class="box">
+							<img src="../img/img05.jpg" alt="">
+							<h3>Dra. Rudolph Alejandra</h3>
+							<h4>Pediatra</h4>
+							<p>Matricula N° 249887</p>
+						</div>
+					</div>
+				</div>
 
-	<!-- ICONOS -->
-	<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+			</section>
+		</main>
+		<footer class="pie_pagina">
+			<p>NodeJS &copy Codo a Codo 2024</p>
+		</footer>
 
-	<!-- SWEET ALERT -->
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		<!-- ICONOS -->
+		<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
-	<!-- BOOTSTRAP -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous"></script>
+		<!-- SWEET ALERT -->
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-	<!-- JS -->
-</body>
+		<!-- BOOTSTRAP -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+			crossorigin="anonymous"
+		></script>
 
+		<!-- JS -->
+	</body>
 </html>
