agregando contacto.js + correcciones en contacto.css y en enlaces a los archivos.html

--- a/pages/caps.html
+++ b/pages/caps.html
@@ -34,19 +34,20 @@
 								href="../index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase activo" href="/pages/caps.html">CAPS</a>
+						<!--	<a class="nav-link enlaces text-uppercase activo" href="caps.html">CAPS</a>
+						-->
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/turnero.html">Sacar turno</a>
+							<a class="nav-link enlaces text-uppercase" href="turnero.html">Sacar turno</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/agenda.html">Agenda turnos</a>
+							<a class="nav-link enlaces text-uppercase" href="agenda.html">Agenda turnos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/personal.html">Personal Médico</a>
+							<a class="nav-link enlaces text-uppercase" href="personal.html">Personal Médico</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/contacto.html">Contacto</a>
+							<a class="nav-link enlaces text-uppercase" href="contacto.html">Contacto</a>
 						</li>
 					</ul>
 				</div>
