--- a/pages/personal.html
+++ b/pages/personal.html
@@ -50,35 +50,35 @@
 							<li class="nav-item">
 								<a
 									class="nav-link enlaces text-uppercase"
-									href="/pages/caps.html"
+									href="caps.html"
 									>CAPS</a
 								>
 							</li>
 							<li class="nav-item">
 								<a
 									class="nav-link enlaces text-uppercase"
-									href="/pages/turnero.html"
+									href="turnero.html"
 									>Sacar turno</a
 								>
 							</li>
 							<li class="nav-item">
 								<a
 									class="nav-link enlaces text-uppercase"
-									href="/pages/agenda.html"
+									href="agenda.html"
 									>Agenda turnos</a
 								>
 							</li>
 							<li class="nav-item">
-								<a
+								<!--<a
 									class="nav-link enlaces text-uppercase activo"
-									href="/pages/personal.html"
+									href="personal.html"
 									>Personal Médico</a
-								>
+								>-->
 							</li>
 							<li class="nav-item">
 								<a
 									class="nav-link enlaces text-uppercase"
-									href="/pages/contacto.html"
+									href="contacto.html"
 									>Contacto</a
 								>
 							</li>
