--- a/pages/turnero.html
+++ b/pages/turnero.html
@@ -9,7 +9,7 @@
 
 	<!-- BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-	  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
 	<!-- CSS General -->
 	<link rel="stylesheet" href="/css/general.css" />
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
 			<div class="container-fluid bg-transparent">
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-				  aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+					aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse bg-transparent" id="navbarNavDropdown">
@@ -31,19 +31,20 @@
 							<a class="nav-link enlaces text-uppercase" aria-current="page" href="../index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/caps.html">CAPS</a>
+							<a class="nav-link enlaces text-uppercase" href="caps.html">CAPS</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase activo" href="/pages/turnero.html">Sacar turno</a>
+						<!--	<a class="nav-link enlaces text-uppercase activo" href="turnero.html">Sacar turno</a>
+						-->
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/agenda.html">Agenda turnos</a>
+							<a class="nav-link enlaces text-uppercase" href="agenda.html">Agenda turnos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/personal.html">Personal Médico</a>
+							<a class="nav-link enlaces text-uppercase" href="personal.html">Personal Médico</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/contacto.html">Contacto</a>
+							<a class="nav-link enlaces text-uppercase" href="contacto.html">Contacto</a>
 						</li>
 					</ul>
 				</div>
